[package]
name = "advent_of_code_2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.develop]
inherits = "release"
overflow-checks = true
incremental = true

[profile.release]
debug = true

[dependencies]
aoc_lib = { path = "../aoc_lib" }
chumsky = "1.0.0-alpha.6"
color-eyre = "0.6.2"
itertools = "0.11.0"
smallvec = { version = "1.11.2", features = ["const_generics", "union"] }
